# ELMforID

./: README.md  pyproject.toml
elmfored/: main.ipynb
elmforid/: elmforid.ipynb  main.ipynb
