[tool.poetry]
name = "elmfored"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.2.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
lightning = "^2.2.0.post0"
einops = "^0.7.0"
wandb = "^0.16.3"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
dvc = "^3.49.0"

[tool.poetry.group.dev.dependencies]
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.2.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
lightning = "^2.2.0.post0"
wandb = "^0.16.3"
einops = "^0.7.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
