[tool.poetry]
name = "elmforid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
dvc = "^3.49.0"
optuna = "^3.6.1"
statsmodels = "^0.14.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
